Separa keywords com vírgulas em um único campo 'keywords'

--- a/bib.bib
+++ b/bib.bib
@@ -226,8 +226,7 @@
   edition =      {2. ed.},
   isbn =         393958078,
   annote =       {[Biblioteca da Emus: 785.028 a2370]},
-  keywords =     {aula composicao},
-  keywords =     {orchestration}
+  keywords =     {orchestration, aula composicao}
 }
 
 @Article{	  agawu04:how,
@@ -823,18 +822,10 @@
                   designed to address standard musical notation and a
                   singer's visual/kinesthetic response to it, may
                   indeed be useful.",
-  keywords =     "musical contour",
-  keywords =     "Melodic contour",
-  keywords =     "Classical voice",
-  keywords =     "Timbre",
-  keywords =     "Studio technology",
-  keywords =     "Mapping systems",
-  keywords =     "Pedagogy",
-  keywords =     "Tone quality",
-  keywords =     "Notation",
-  keywords =     "Singing posture",
-  keywords =     "Visual/kinesthetic response",
-  keywords =     "Legato"
+  keywords =     "Legato, musical contour, Melodic contour, Classical
+                  voice, Timbre, Studio technology, Mapping systems,
+                  Pedagogy, Tone quality, Notation, Singing posture,
+                  Visual/kinesthetic response"
 }
 
 @Manual{	  bartetzki:cmask,
@@ -1025,8 +1016,7 @@
   year =         1970,
   author =       {{Ludwig van} Beethoven},
   address =      {New York},
-  keywords =     {music scores},
-  keywords =     {music harmony and theory}
+  keywords =     {music harmony and theory, music scores}
 }
 
 @Book{		  behague.ea76:music,
@@ -2363,8 +2353,7 @@
   address =      {Buenos Aires},
   comment =      {Trad. A. Jurafsky},
   note =         {[Biblioteca da Emus: 785.028 c3775]},
-  keywords =     {aula composicao},
-  keywords =     {orchestration}
+  keywords =     {orchestration, aula composicao}
 }
 
 @Manual{	  castan02:music,
@@ -2545,8 +2534,7 @@
   year =         2002,
   publisher =    {Cambridge University Press},
   address =      {Cambridge; New York},
-  keywords =     {music history},
-  keywords =     {music harmony and theory}
+  keywords =     {music harmony and theory, music history}
 }
 
 @Misc{		  chroboczek,
@@ -3917,8 +3905,7 @@
                   interdependence of the two components, scale and
                   contour.},
   file =         {dowling78:scale.pdf},
-  keywords =     {perception},
-  keywords =     {musical contour}
+  keywords =     {musical contour, perception}
 }
 
 @Article{	  dowling94:melodic,
@@ -6101,8 +6088,7 @@
   address =      {Englewood Cliffs, N.J.},
   isbn =         139003088,
   annote =       {[Biblioteca da Emus: 785.028 k34]},
-  keywords =     {aula composicao},
-  keywords =     {orchestration}
+  keywords =     {orchestration, aula composicao}
 }
 
 @Book{		  kennan.ea97:technique,
@@ -6736,8 +6722,7 @@
   publisher =    {MIT Press},
   year =         1983,
   address =      {Cambridge},
-  keywords =     {music harmony and theory},
-  keywords =     {music tempo}
+  keywords =     {music harmony and theory, music tempo}
 }
 
 @Book{		  lerdahl.ea90:generative,
@@ -8205,8 +8190,7 @@
   month =        {Agosto},
   publisher =    {UNAM. Escuela Nacional de Música},
   where =        {jamary-CEM02103.pdf},
-  keywords =     {computer music},
-  keywords =     {coding}
+  keywords =     {coding, computer music}
 }
 
 @Misc{		  oliveira01:pcn,
@@ -11255,8 +11239,7 @@
   address =      {New York},
   isbn =         393950530,
   annote =       {[Biblioteca da Emus: 781.240904 s878]},
-  keywords =     {aula composicao},
-  keywords =     {music notation}
+  keywords =     {music notation, aula composicao}
 }
 
 @InProceedings{	  stoyan08:lisp,
