--- a/bib.bib
+++ b/bib.bib
@@ -3585,6 +3585,21 @@
   keywords =     {computer science}
 }
 
+@Article{	  dineen94:schoenberg,
+  author =       {Murray Dineen},
+  title =        {Schoenberg on the Modes: Characteristics,
+                  Substitutes, and Tonal Orientation},
+  journal =      {College Music Symposium},
+  year =         {1993/1994},
+  publisher =    {College Music Society},
+  volume =       {33/34},
+  pages =        {140--154},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/40374253}},
+  file =         {40374253.pdf},
+  keywords =     {music harmony and theory}
+}
+
 @Article{	  donnelly02:bison,
   title =        {Bison: The YACC-compatible parser generator},
   annote =       {Manual para a versão 1.35 do Bison.},
@@ -3973,6 +3988,26 @@
   number =       4,
   volume =       8,
   year =         1994
+}
+
+@InCollection{	  duckles.ea02:musicology,
+  author =       {Vincent Duckles and Jann Pasler and Glenn Stanley
+                  and Thomas Christensen and Robert Balchin and Tilman
+                  Seebass and Bojan Bujic and Eric F. Clarke and Susan
+                  Mcclary and Barbara H. Haggh and Laurence Libin and
+                  Janet K. Page and Lydia Goehr and Jean Gribenski and
+                  Carolyn Gianturco and Pamela Potter and Milos
+                  Velimirović and and Gary Tomlinson and Gerard
+                  Béhague and Masakata Kanazawa and Peter Platt and
+                  David Fallows},
+  title =        {Musicology},
+  booktitle =    {Grove Music},
+  publisher =    {Oxford University Press},
+  year =         2002,
+  editor =       {Laura Williams Macy},
+  annote =       {Disponível em \url{http://www.grovemusic.com/}},
+  file =         {S46710.htm},
+  keywords =     {musicology}
 }
 
 @Book{		  duckles.ea97:music,
@@ -7120,6 +7155,24 @@
   publisher =    {Macmillan},
   file =         {grove_main.htm},
   keywords =     {music dictionary}
+}
+
+@Article{	  magaldi95:music,
+  author =       {Cristina Magaldi},
+  title =        {Music for the Elite: Musical Societies in Imperial
+                  Rio de Janeiro},
+  journal =      {Latin American Music Review / Revista de Música
+                  Latinoamericana},
+  year =         1995,
+  publisher =    {University of Texas Press},
+  volume =       16,
+  number =       1,
+  pages =        {1--41},
+  month =        {Spring---Summer},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/779977}},
+  file =         {779977.pdf},
+  keywords =     {music history}
 }
 
 @Book{		  malm77:music,
@@ -11076,6 +11129,24 @@
   keywords =     {music analysis}
 }
 
+@Article{	  society74:review,
+  author =       {{Croatian Musicological Society}},
+  title =        {Review: Perspectives in Musicology by Barry
+                  S. Brook, Edward O. D. Downes, Sherman van Solkema},
+  journal =      {International Review of the Aesthetics and Sociology
+                  of Music},
+  year =         1974,
+  publisher =    {Croatian Musicological Society},
+  volume =       5,
+  number =       2,
+  pages =        {338--340},
+  month =        {Dec},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/836578}},
+  file =         {836578.pdf},
+  keywords =     {musicology}
+}
+
 @Article{	  sohl86:mapping,
   keyword =      {temperamento},
   title =        {Mapping Tonality},
@@ -12455,6 +12526,35 @@
   volume =       17,
   number =       28,
   pages =        {5--18}
+}
+
+@Article{	  wintle82:issues,
+  author =       {Christopher Wintle},
+  title =        {Review: Issues in Dahlhaus},
+  journal =      {Music Analysis},
+  year =         1982,
+  publisher =    {Blackwell Publishing},
+  volume =       1,
+  number =       3,
+  pages =        {341--355},
+  month =        {Oct},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/854179}},
+  file =         {854179.pdf},
+  annote =       {Reviewed work(s): Richard Wagner's Music Dramas by
+                  Carl Dahlhaus; Mary Whittall Between Romanticism and
+                  Modernism: Four Studies in the Music of the Later
+                  Nineteenth Century by Carl Dahlhaus; Mary Whittall
+                  Esthetics of Music by Carl Dahlhaus; William
+                  W. Austin 'Harmony,' The New Grove Dictionary of
+                  Music and Musicians by Carl Dahlhaus 'Counterpoint,'
+                  The New Grove Dictionary of Music and Musicians by
+                  Carl Dahlhaus 'Tonality,' The New Grove Dictionary
+                  of Music and Musicians by Carl Dahlhaus 'Wagner,'
+                  The New Grove Dictionary of Music and Musicians by
+                  Carl Dahlhaus Schoenberg and Schenker by Carl
+                  Dahlhaus},
+  keywords =     {musicology}
 }
 
 @Book{		  wiora67:four,
