--- a/bib.bib
+++ b/bib.bib
@@ -2122,6 +2122,24 @@
   where =        {paper}
 }
 
+@Article{	  cadwallader84:schenker,
+  author =       {Allen Cadwallader},
+  title =        {Schenker's Unpublished Graphic Analysis of Brahms's
+                  Intermezzo Op. 117, No. 2: Tonal Structure and
+                  Concealed Motivic Repetition},
+  journal =      {Music Theory Spectrum},
+  year =         1984,
+  publisher =    {University of California Press on behalf of the
+                  Society for Music Theory},
+  volume =       6,
+  pages =        {1--13},
+  month =        {Spring},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/745800}},
+  file =         {cadwallader84:schenker.pdf},
+  keywords =     {music analysis}
+}
+
 @InProceedings{	  cahill01:score,
   author =       {Cahill, M and Ó Maidín, D.},
   title =        {Score processing for MIR},
@@ -8071,6 +8089,23 @@
   year =         1995,
   file =         {symbolic-vs-numeric.pdf},
   keywords =     {harmonic analysis}
+}
+
+@Article{	  musgrave83:brahms,
+  author =       {Michael Musgrave},
+  title =        {Brahms's First Symphony: Thematic Coherence and Its
+                  Secret Origin},
+  journal =      {Music Analysis},
+  year =         1983,
+  publisher =    {Blackwell Publishing},
+  volume =       2,
+  number =       2,
+  pages =        {117--133},
+  month =        {Jul.},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/854245}},
+  file =         {musgrave83:brahms.pdf},
+  keywords =     {music analysis}
 }
 
 @Book{		  neal.ea93:probabilistic,
