Corrige pdf filenames

--- a/bib.bib
+++ b/bib.bib
@@ -3614,7 +3614,7 @@
   pages =        {140--154},
   note =         {Available at
                   \url{http://www.jstor.org/stable/40374253}},
-  file =         {40374253.pdf},
+  file =         {dineen94:schoenberg.pdf},
   keywords =     {music harmony and theory}
 }
 
@@ -7189,7 +7189,7 @@
   month =        {Spring---Summer},
   note =         {Available at
                   \url{http://www.jstor.org/stable/779977}},
-  file =         {779977.pdf},
+  file =         {magaldi95:music.pdf},
   keywords =     {music history}
 }
 
@@ -11178,7 +11178,7 @@
   month =        {Dec},
   note =         {Available at
                   \url{http://www.jstor.org/stable/836578}},
-  file =         {836578.pdf},
+  file =         {society74:review.pdf},
   keywords =     {musicology}
 }
 
@@ -12575,7 +12575,7 @@
   month =        {Oct},
   note =         {Available at
                   \url{http://www.jstor.org/stable/854179}},
-  file =         {854179.pdf},
+  file =         {wintle82:issues.pdf},
   annote =       {Reviewed work(s): Richard Wagner's Music Dramas by
                   Carl Dahlhaus; Mary Whittall Between Romanticism and
                   Modernism: Four Studies in the Music of the Later
