Insere link para pdf de Schoenberg. s/ö/oe/

--- a/bib.bib
+++ b/bib.bib
@@ -10247,14 +10247,28 @@
   publisher =    {W.W. Norton},
   year =         1954,
   address =      {New York},
+  file =         {schoenberg54:structural.pdf},
   keywords =     {music harmony and theory}
 }
 
+@Book{		  schoenberg67:fundamentals,
+  title =        {Fundamentals of musical composition},
+  key =          {schonberg:fundamentals},
+  publisher =    {Faber and Faber Ltd},
+  year =         1967,
+  editor =       {Gerald Strange and Leonard Stein},
+  author =       {Arnold Schoenberg},
+  address =      {London},
+  file =         {schoenberg67:fundamentals.pdf},
+  keywords =     {composition}
+}
+
 @Book{		  schoenberg83:theory,
-  title =        {{Theory of Harmony}},
-  author =       {Schoenberg, A.},
+  title =        {Theory of Harmony},
+  author =       {Arnold Schoenberg},
   year =         1983,
   publisher =    {University of California Press},
+  file =         {schoenberg83:theory.pdf},
   keywords =     {harmonic analysis}
 }
 
@@ -10342,7 +10356,7 @@
 }
 
 @Book{		  schonberg91:fundamentos,
-  author =       {Schönberg, Arnold},
+  author =       {Schoenberg, Arnold},
   title =        {Fundamentos da Composição Musical},
   translator =   {trad. Eduardo Seineman},
   publisher =    {Editora da Universidade de São Paulo},
@@ -10350,17 +10364,6 @@
   address =      {São Paulo},
   note =         {[Biblioteca da Emus: 781.61 s365f]},
   keywords =     {aula composicao}
-}
-
-@Book{		  schonberg:fundamentals,
-  title =        {Fundamentals of musical composition},
-  key =          {schonberg:fundamentals},
-  publisher =    {Faber and Faber Ltd},
-  year =         1967,
-  editor =       {Gerald Strange and Leonard Stein},
-  author =       {Arnold Schönberg},
-  address =      {London},
-  keywords =     {composition}
 }
 
 @Manual{	  schottstaedt02:clm,
