Insere pdf filenames e corrige Cherubini

--- a/bib.bib
+++ b/bib.bib
@@ -226,6 +226,7 @@
   edition =      {2. ed.},
   isbn =         393958078,
   annote =       {[Biblioteca da Emus: 785.028 a2370]},
+  file =         {adler89:study.pdf},
   keywords =     {orchestration, aula composicao}
 }
 
@@ -2513,12 +2514,13 @@
   year =         1994
 }
 
-@Book{		  cherubinid.treatise,
+@Book{		  cherubini54:treatise,
   author =       {Luigi Cherubini},
-  title =        {A treatise on counterpoint and fugue.},
-  publisher =    {Kalmus},
-  year =         {s.d.},
-  address =      {New York},
+  title =        {A treatise on counterpoint and fugue},
+  publisher =    {Novello, Ewer and Co},
+  year =         1854,
+  address =      {London},
+  file =         {cherubini54:treatise.pdf},
   keywords =     {counterpoint}
 }
 
@@ -2902,6 +2904,7 @@
   publisher =    {Schirmer Books},
   year =         1997,
   author =       {David Cope},
+  file =         {cope97:techniques.pdf},
   keywords =     {composition}
 }
 
@@ -4663,6 +4666,7 @@
   address =      {New York},
   note =         {translated and edited by Alfred Mann, with the
                   collaboration of John Edmunds},
+  file =         {fux.ea71:study.pdf},
   keywords =     {counterpoint}
 }
 
