Insere artigos de Castagna e pdf filename

--- a/bib.bib
+++ b/bib.bib
@@ -2375,6 +2375,57 @@
   keywords =     {orchestration, aula composicao}
 }
 
+@Misc{		  castagna04:imperial,
+  author =       {Paulo Castagna},
+  title =        {A Imperial Academia de Música e Ópera Nacional e a
+                  Ópera no Brasil no século XIX},
+  howpublished = {Available at
+                  \url{http://www.ia.unesp.br/docentes/castagna/hmb/HMB_2004_apostila10.pdf}},
+  year =         2004
+}
+
+@Misc{		  castagna04:movimento,
+  author =       {Paulo Castagna},
+  title =        {O movimento musical romântico no BRASIL},
+  howpublished = {Available at
+                  \url{http://www.ia.unesp.br/docentes/castagna/hmb/HMB_2004_apostila12.pdf}},
+  year =         2004
+}
+
+@Misc{		  castagna04:musica,
+  author =       {Paulo Castagna},
+  title =        {A Música Religiosa Mineira no século XVIII e
+                  primeira metade do século XIX},
+  howpublished = {Available at
+                  \url{http://www.ia.unesp.br/docentes/castagna/hmb/HMB_2004_apostila06.pdf}},
+  year =         2004
+}
+
+@Misc{		  castagna04:musica-1,
+  author =       {Paulo Castagna},
+  title =        {A música urbana de salão no século XIX},
+  howpublished = {Available at
+                  \url{http://www.ia.unesp.br/docentes/castagna/hmb/HMB_2004_apostila11.pdf}},
+  year =         2004
+}
+
+@Misc{		  castagna04:producao,
+  author =       {Paulo Castagna},
+  title =        {A Produção religiosa nordestina e paulista no
+                  período Colonial e Imperial},
+  howpublished = {Available at
+                  \url{http://www.ia.unesp.br/docentes/castagna/hmb/HMB_2004_apostila07.pdf}},
+  year =         2004
+}
+
+@Misc{		  castagna04:producao-1,
+  author =       {Paulo Castagna},
+  title =        {A produção musical carioca entre c.1780-1831},
+  howpublished = {Available at
+                  \url{http://www.ia.unesp.br/docentes/castagna/hmb/HMB_2004_apostila08.pdf}},
+  year =         2004
+}
+
 @Manual{	  castan02:music,
   author =       {Gerd Castan},
   title =        {Music notation},
@@ -7649,6 +7700,7 @@
   year =         1908,
   publisher =    {Typographia de S. Joaquim},
   address =      {Bahia},
+  file =         {mello08:musica.pdf},
   keywords =     {music history}
 }
 
