--- a/bib.bib
+++ b/bib.bib
@@ -2386,7 +2386,7 @@
 
 @Misc{		  castagna04:movimento,
   author =       {Paulo Castagna},
-  title =        {O movimento musical romântico no BRASIL},
+  title =        {O movimento musical romântico no Brasil},
   howpublished = {Available at
                   \url{http://www.ia.unesp.br/docentes/castagna/hmb/HMB_2004_apostila12.pdf}},
   year =         2004
