--- a/bib.bib
+++ b/bib.bib
@@ -3423,6 +3423,22 @@
   where =        {paper}
 }
 
+@Article{	  danuser.ea05:review,
+  author =       {Hermann Danuser and Mary Whittall},
+  title =        {Review: The Cambridge History of Western Music
+                  Theory by Thomas Christensen},
+  journal =      {Music Analysis},
+  volume =       24,
+  number =       {1--2},
+  pages =        {265--282},
+  year =         2005,
+  publisher =    {Akademie der Wissenschaften},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/3840782}},
+  file =         {danuser.ea05:review.pdf},
+  keywords =     {musicology}
+}
+
 @TechReport{	  dasgupta07:hardness,
   title =        {{The hardness of k-means clustering}},
   author =       {Dasgupta, S.},
@@ -4934,6 +4950,22 @@
                   \url{http://www.jstor.org/stable/843961}},
   file =         {gosman97:stacked.pdf},
   keywords =     {music harmony and theory}
+}
+
+@Article{	  gossett89:carl,
+  author =       {Philip Gossett},
+  title =        {Carl Dahlhaus and the 'Ideal Type'},
+  journal =      {19th-Century Music},
+  year =         1989,
+  publisher =    {University of California Press},
+  volume =       13,
+  number =       1,
+  pages =        {49--56},
+  month =        {Summer},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/746211}},
+  file =         {gossett89:carl.pdf},
+  keywords =     {musicology}
 }
 
 @Article{	  gould00:balzano,
@@ -6511,6 +6543,23 @@
   address =      {Brasília},
   year =         2006,
   keywords =     {harmonic analysis}
+}
+
+@Article{	  krummacher94:reception,
+  author =       {Friedhelm Krummacher},
+  title =        {Reception and Analysis: On the Brahms Quartets,
+                  Op. 51, Nos. 1 and 2},
+  journal =      {19th-Century Music},
+  year =         1994,
+  publisher =    {University of California Press},
+  volume =       18,
+  number =       1,
+  pages =        {24--45},
+  month =        {Summer},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/746600}},
+  file =         {krummacher94:reception.pdf},
+  keywords =     {musicology}
 }
 
 @Manual{	  kuehn01:manual,
@@ -12444,6 +12493,22 @@
   volume =       73,
   pages =        {100--107},
   keywords =     {music perception}
+}
+
+@Article{	  whittall91:review,
+  author =       {Arnold Whittall},
+  title =        {Review: Carl Dahlhaus, the Nineteenth Century and
+                  Opera},
+  journal =      {Cambridge Opera Journal},
+  year =         1991,
+  volume =       3,
+  number =       1,
+  pages =        {79--88},
+  month =        {Mar},
+  note =         {Available at
+                  \url{http://www.jstor.org/stable/823650}},
+  file =         {whittall91:review.pdf},
+  keywords =     {musicology}
 }
 
 @Article{	  wibberley96:josquin's,
