more articles from jmt

--- a/jmt.bib
+++ b/jmt.bib
@@ -29,6 +29,17 @@
   file          = {843922.pdf}
 }
 
+@Article{         al-zand05:improvisation,
+  author        = {Karim Al-Zand},
+  title         = {Improvisation as continually juggled priorities: julian
+                  "cannonball" adderley's "straight, no chaser"},
+  journal       = {Computer Music Journal},
+  year          = {2005},
+  volume        = {49},
+  number        = {2},
+  file          = {49-2-209.pdf}
+}
+
 @Article{         alegant99:when,
   author        = {Brian Alegant},
   title         = {When Even Becomes Odd: A Partitional Approach to
@@ -113,6 +124,17 @@
   file          = {843342.pdf}
 }
 
+@Article{         aubrey08:reconsidering,
+  author        = {Elizabeth Aubrey},
+  title         = {Reconsidering "high style" and "low style" in medieval
+                  song},
+  journal       = {Computer Music Journal},
+  year          = {2008},
+  volume        = {52},
+  number        = {1},
+  file          = {52-1-75.pdf}
+}
+
 @Article{         babbitt61:set,
   author        = {Milton Babbitt},
   title         = {Set Structure as a Compositional Determinant},
@@ -144,6 +166,27 @@
   file          = {843890.pdf}
 }
 
+@Article{         baileyshea07:hexatonic,
+  author        = {Matt BaileyShea},
+  title         = {The hexatonic and the double tonic: wolf's christmas
+                  rose},
+  journal       = {Computer Music Journal},
+  year          = {2007},
+  volume        = {51},
+  number        = {2},
+  file          = {51-2-187.pdf}
+}
+
+@Article{         bain.ea08:sarah,
+  author        = {Jennifer Bain and Meredith Evans},
+  title         = {A sarah fuller bibliography},
+  journal       = {Computer Music Journal},
+  year          = {2008},
+  volume        = {52},
+  number        = {1},
+  file          = {52-1-9.pdf}
+}
+
 @Article{         bain03:theorizing,
   author        = {Jennifer Bain},
   title         = {Theorizing the Cadence in the Music of Machaut},
@@ -152,6 +195,16 @@
   volume        = {47},
   number        = {2},
   file          = {30041094.pdf}
+}
+
+@Article{         bain08:hildegard,
+  author        = {Jennifer Bain},
+  title         = {Hildegard, hermannus, and late chant style},
+  journal       = {Computer Music Journal},
+  year          = {2008},
+  volume        = {52},
+  number        = {1},
+  file          = {52-1-123.pdf}
 }
 
 @Article{         bakeman65:procedures,
@@ -498,6 +551,16 @@
   file          = {843784.pdf}
 }
 
+@Article{         berry06:journal,
+  author        = {David Carson Berry},
+  title         = {Journal of music theory under allen forte's editorship},
+  journal       = {Computer Music Journal},
+  year          = {2006},
+  volume        = {50},
+  number        = {1},
+  file          = {50-1-7.pdf}
+}
+
 @Article{         berry78:rhythmic,
   author        = {Wallace Berry},
   title         = {Rhythmic Accelerations in Beethoven},
@@ -593,6 +656,16 @@
   volume        = {32},
   number        = {1},
   file          = {843383.pdf}
+}
+
+@Article{         bribitzer-stull06:cadenza,
+  author        = {Matthew Bribitzer-Stull},
+  title         = {The cadenza as parenthesis: an analytic approach},
+  journal       = {Computer Music Journal},
+  year          = {2006},
+  volume        = {50},
+  number        = {2},
+  file          = {50-2-211.pdf}
 }
 
 @Article{         brinkman86:representing,
@@ -805,6 +878,17 @@
   file          = {843479.pdf}
 }
 
+@Article{         cafiero07:early,
+  author        = {Rosa Cafiero},
+  title         = {The early reception of neapolitan partimento theory in
+                  france: a survey},
+  journal       = {Computer Music Journal},
+  year          = {2007},
+  volume        = {51},
+  number        = {1},
+  file          = {51-1-137.pdf}
+}
+
 @Article{         caine63:tape,
   author        = {Hugh Le Caine},
   title         = {A Tape Recorder for Use in Electronic Music Studios and
@@ -814,6 +898,16 @@
   volume        = {7},
   number        = {1},
   file          = {843023.pdf}
+}
+
+@Article{         callender07:continuous,
+  author        = {Clifton Callender},
+  title         = {Continuous harmonic spaces},
+  journal       = {Computer Music Journal},
+  year          = {2007},
+  volume        = {51},
+  number        = {2},
+  file          = {51-2-277.pdf}
 }
 
 @Article{         callender98:voice-leading,
@@ -846,6 +940,17 @@
   volume        = {28},
   number        = {2},
   file          = {843534.pdf}
+}
+
+@Article{         capuzzo04:complement,
+  author        = {Guy Capuzzo},
+  title         = {The complement union property in the music of elliott
+                  carter},
+  journal       = {Computer Music Journal},
+  year          = {2004},
+  volume        = {48},
+  number        = {1},
+  file          = {48-1-1.pdf}
 }
 
 @Article{         carey02:coherence,
@@ -1145,6 +1250,16 @@
   file          = {843879.pdf}
 }
 
+@Article{         cook05:parsimony,
+  author        = {Robert C. Cook},
+  title         = {Parsimony and extravagance},
+  journal       = {Computer Music Journal},
+  year          = {2005},
+  volume        = {49},
+  number        = {1},
+  file          = {49-1-109.pdf}
+}
+
 @Article{         coover59:music,
   author        = {James Coover},
   title         = {Music Theory in Translation: A Bibliography},
@@ -1215,6 +1330,16 @@
   volume        = {19},
   number        = {1},
   file          = {843748.pdf}
+}
+
+@Article{         damschroder06:schubert,
+  author        = {David Damschroder},
+  title         = {Schubert, chromaticism, and the ascending 5-6 sequence},
+  journal       = {Computer Music Journal},
+  year          = {2006},
+  volume        = {50},
+  number        = {2},
+  file          = {50-2-253.pdf}
 }
 
 @Article{         daniels65:microtonality,
@@ -1427,6 +1552,17 @@
   file          = {843590.pdf}
 }
 
+@Article{         everett04:deep-level,
+  author        = {Walter Everett},
+  title         = {Deep-level portrayals of directed and misdirected motions
+                  in nineteenth-century lyric song},
+  journal       = {Computer Music Journal},
+  year          = {2004},
+  volume        = {48},
+  number        = {1},
+  file          = {48-1-25.pdf}
+}
+
 @Article{         f63:editorial,
   author        = {A. F.},
   title         = {Editorial Note},
@@ -1578,6 +1714,16 @@
   file          = {843710.pdf}
 }
 
+@Article{         fuller08:interpreting,
+  author        = {Sarah Fuller},
+  title         = {Interpreting hucbald on mode},
+  journal       = {Computer Music Journal},
+  year          = {2008},
+  volume        = {52},
+  number        = {1},
+  file          = {52-1-13.pdf}
+}
+
 @Article{         fuller67:structure,
   author        = {Lejaren Hiller AND Ramon Fuller},
   title         = {Structure and Information in Webern's Symphonie, Op. 21},
@@ -1682,6 +1828,16 @@
   file          = {843641.pdf}
 }
 
+@Article{         gjerdingen07:partimento,
+  author        = {Robert O. Gjerdingen},
+  title         = {Partimento, que me veux-tu?},
+  journal       = {Computer Music Journal},
+  year          = {2007},
+  volume        = {51},
+  number        = {1},
+  file          = {51-1-85.pdf}
+}
+
 @Article{         goder72:interval-triangle,
   author        = {Miriam Goder},
   title         = {The Interval-Triangle},
@@ -1690,6 +1846,17 @@
   volume        = {16},
   number        = {1/2},
   file          = {843330.pdf}
+}
+
+@Article{         goldenberg06:journal,
+  author        = {Yosef Goldenberg},
+  title         = {Journal of music theory over the years: content analysis
+                  of the articles and related aspects},
+  journal       = {Computer Music Journal},
+  year          = {2006},
+  volume        = {50},
+  number        = {1},
+  file          = {50-1-25.pdf}
 }
 
 @Article{         goldenberg98:letter,
@@ -1782,6 +1949,16 @@
   volume        = {45},
   number        = {2},
   file          = {3653443.pdf}
+}
+
+@Article{         hanninen04:associative,
+  author        = {Dora A. Hanninen},
+  title         = {Associative sets, categories, and music analysis},
+  journal       = {Computer Music Journal},
+  year          = {2004},
+  volume        = {48},
+  number        = {2},
+  file          = {48-2-147.pdf}
 }
 
 @Article{         hansen74:letters,
@@ -1896,6 +2073,17 @@
   volume        = {18},
   number        = {1},
   file          = {843139.pdf}
+}
+
+@Article{         holtmeier07:heinichen,
+  author        = {Ludwig Holtmeier},
+  title         = {Heinichen, rameau, and the italian thoroughbass tradition:
+                  concepts of tonality and chord in the rule of the octave},
+  journal       = {Computer Music Journal},
+  year          = {2007},
+  volume        = {51},
+  number        = {1},
+  file          = {51-1-5.pdf}
 }
 
 @Article{         hook02:uniform,
@@ -2063,6 +2251,17 @@
   file          = {843491.pdf}
 }
 
+@Article{         judd08:music,
+  author        = {Cristle Collins Judd},
+  title         = {Music in dialogue: conversational, literary, and didactic
+                  discourse about music in the renaissance},
+  journal       = {Computer Music Journal},
+  year          = {2008},
+  volume        = {52},
+  number        = {1},
+  file          = {52-1-41.pdf}
+}
+
 @Article{         k57:foreword,
   author        = {D. K.},
   title         = {Foreword},
@@ -2113,6 +2312,28 @@
   volume        = {37},
   number        = {2},
   file          = {843786.pdf}
+}
+
+@Article{         kielian-gilbert06:inventing,
+  author        = {Marianne Kielian-Gilbert},
+  title         = {Inventing a melody with harmony: tonal potential and
+                  bach's "das alte jahr vergangen ist"},
+  journal       = {Computer Music Journal},
+  year          = {2006},
+  volume        = {50},
+  number        = {1},
+  file          = {50-1-77.pdf}
+}
+
+@Article{         klumpenhouwer05:aspects,
+  author        = {Henry Klumpenhouwer},
+  title         = {Aspects of depth in k-net analysis with special reference
+                  to webern's opus 16/4},
+  journal       = {Computer Music Journal},
+  year          = {2005},
+  volume        = {49},
+  number        = {1},
+  file          = {49-1-1.pdf}
 }
 
 @Article{         klumpenhouwer94:instance,
@@ -2295,6 +2516,16 @@
   file          = {843709.pdf}
 }
 
+@Article{         larson05:composition,
+  author        = {Steve Larson},
+  title         = {Composition versus improvisation?},
+  journal       = {Computer Music Journal},
+  year          = {2005},
+  volume        = {49},
+  number        = {2},
+  file          = {49-2-241.pdf}
+}
+
 @Article{         larson97:problem,
   author        = {Steve Larson},
   title         = {The Problem of Prolongation in "Tonal" Music: Terminology,
@@ -2357,6 +2588,17 @@
   volume        = {2},
   number        = {1},
   file          = {842930.pdf}
+}
+
+@Article{         leong07:humperdinck,
+  author        = {Daphne Leong},
+  title         = {Humperdinck and wagner: metric states, symmetries, and
+                  systems},
+  journal       = {Computer Music Journal},
+  year          = {2007},
+  volume        = {51},
+  number        = {2},
+  file          = {51-2-211.pdf}
 }
 
 @Article{         lerdahl81:generative,
@@ -2685,6 +2927,16 @@
   file          = {843575.pdf}
 }
 
+@Article{         margulis07:moved,
+  author        = {Elizabeth Hellmuth Margulis},
+  title         = {Moved by nothing: listening to musical silence},
+  journal       = {Computer Music Journal},
+  year          = {2007},
+  volume        = {51},
+  number        = {2},
+  file          = {51-2-245.pdf}
+}
+
 @Article{         marshall81:editors,
   author        = {Martha MacLean Hyde AND Warner Marshall},
   title         = {From the Editors},
@@ -2703,6 +2955,17 @@
   volume        = {41},
   number        = {1},
   file          = {843767.pdf}
+}
+
+@Article{         martin05:balancing,
+  author        = {Henry Martin},
+  title         = {Balancing composition and improvisation in james p.
+                  johnson's "carolina shout"},
+  journal       = {Computer Music Journal},
+  year          = {2005},
+  volume        = {49},
+  number        = {2},
+  file          = {49-2-277.pdf}
 }
 
 @Article{         martino61:source,
@@ -2746,6 +3009,16 @@
   volume        = {27},
   number        = {1},
   file          = {843559.pdf}
+}
+
+@Article{         mcfarland04:debussy,
+  author        = {Mark McFarland},
+  title         = {Debussy: the origins of a method},
+  journal       = {Computer Music Journal},
+  year          = {2004},
+  volume        = {48},
+  number        = {2},
+  file          = {48-2-295.pdf}
 }
 
 @Article{         mclean01:nature,
@@ -3135,6 +3408,17 @@
   file          = {843109.pdf}
 }
 
+@Article{         pearsall04:transformational,
+  author        = {Edward Pearsall},
+  title         = {Transformational streams: unraveling melodic processes in
+                  twentieth-century motivic music},
+  journal       = {Computer Music Journal},
+  year          = {2004},
+  volume        = {48},
+  number        = {1},
+  file          = {48-1-69.pdf}
+}
+
 @Article{         pearsall99:mind,
   author        = {Edward Pearsall},
   title         = {Mind and Music: On Intentionality, Music Theory, and
@@ -3364,6 +3648,28 @@
   volume        = {35},
   number        = {1/2},
   file          = {843810.pdf}
+}
+
+@Article{         rehding05:rousseau,
+  author        = {Alexander Rehding},
+  title         = {Rousseau, rameau, and enharmonic furies in the french
+                  enlightenment},
+  journal       = {Computer Music Journal},
+  year          = {2005},
+  volume        = {49},
+  number        = {1},
+  file          = {49-1-141.pdf}
+}
+
+@Article{         renwick06:time,
+  author        = {William Renwick},
+  title         = {Of time and eternity: reflections on "das alte jahr
+                  vergangen ist"},
+  journal       = {Computer Music Journal},
+  year          = {2006},
+  volume        = {50},
+  number        = {1},
+  file          = {50-1-65.pdf}
 }
 
 @Article{         ricks61:letters,
@@ -3604,6 +3910,16 @@
   file          = {843653.pdf}
 }
 
+@Article{         sanguinetti07:realization,
+  author        = {Giorgio Sanguinetti},
+  title         = {The realization of partimenti: an introduction},
+  journal       = {Computer Music Journal},
+  year          = {2007},
+  volume        = {51},
+  number        = {1},
+  file          = {51-1-51.pdf}
+}
+
 @Article{         sarath96:look,
   author        = {Ed Sarath},
   title         = {A New Look at Improvisation},
@@ -3623,6 +3939,17 @@
   volume        = {40},
   number        = {2},
   file          = {843889.pdf}
+}
+
+@Article{         satyendra04:informal,
+  author        = {Ramon Satyendra},
+  title         = {An informal introduction to some formal concepts from
+                  lewin's transformational theory},
+  journal       = {Computer Music Journal},
+  year          = {2004},
+  volume        = {48},
+  number        = {1},
+  file          = {48-1-99.pdf}
 }
 
 @Article{         schachter68:analysis,
@@ -3983,6 +4310,18 @@
   file          = {3090668.pdf}
 }
 
+@Article{         smith06:harmonic,
+  author        = {Peter H. Smith},
+  title         = {Harmonic cross-reference and the dialectic of articulation
+                  and continuity in sonata expositions of schubert and
+                  brahms},
+  journal       = {Computer Music Journal},
+  year          = {2006},
+  volume        = {50},
+  number        = {2},
+  file          = {50-2-143.pdf}
+}
+
 @Article{         smith73:editing,
   author        = {Leland Smith},
   title         = {Editing and Printing Music by Computer},
@@ -4138,6 +4477,27 @@
   file          = {843616.pdf}
 }
 
+@Article{         stella07:partimenti,
+  author        = {Gaetano Stella},
+  title         = {Partimenti in the age of romanticism: raimondi, platania,
+                  and boucheron},
+  journal       = {Computer Music Journal},
+  year          = {2007},
+  volume        = {51},
+  number        = {1},
+  file          = {51-1-161.pdf}
+}
+
+@Article{         straus05:voice,
+  author        = {Joseph N. Straus},
+  title         = {Voice leading in set-class space},
+  journal       = {Computer Music Journal},
+  year          = {2005},
+  volume        = {49},
+  number        = {1},
+  file          = {49-1-45.pdf}
+}
+
 @Article{         straus87:problem,
   author        = {Joseph N. Straus},
   title         = {The Problem of Prolongation in Post-Tonal Music},
@@ -4168,6 +4528,17 @@
   file          = {843423.pdf}
 }
 
+@Article{         strunk05:notes,
+  author        = {Steven Strunk},
+  title         = {Notes on harmony in wayne shorter's compositions,
+                  1964–67},
+  journal       = {Computer Music Journal},
+  year          = {2005},
+  volume        = {49},
+  number        = {2},
+  file          = {49-2-301.pdf}
+}
+
 @Article{         suurpaa00:path,
   author        = {Lauri Suurpää},
   title         = {The Path from Tonic to Dominant in the Second Movement of
@@ -4177,6 +4548,17 @@
   volume        = {44},
   number        = {2},
   file          = {3090683.pdf}
+}
+
+@Article{         suurpää06:form,
+  author        = {Lauri Suurpää},
+  title         = {Form, structure, and musical drama in two mozart
+                  expositions},
+  journal       = {Computer Music Journal},
+  year          = {2006},
+  volume        = {50},
+  number        = {2},
+  file          = {50-2-181.pdf}
 }
 
 @Article{         swift60:letters,
@@ -4218,6 +4600,16 @@
   volume        = {47},
   number        = {1},
   file          = {30041085.pdf}
+}
+
+@Article{         temperley06:key,
+  author        = {David Temperley},
+  title         = {Key structure in "das alte jahr vergangen ist"},
+  journal       = {Computer Music Journal},
+  year          = {2006},
+  volume        = {50},
+  number        = {1},
+  file          = {50-1-103.pdf}
 }
 
 @Article{         tenney63:sound-generation,
@@ -4364,6 +4756,16 @@
   file          = {843003.pdf}
 }
 
+@Article{         tymoczko04:scale,
+  author        = {Dmitri Tymoczko},
+  title         = {Scale networks and debussy},
+  journal       = {Computer Music Journal},
+  year          = {2004},
+  volume        = {48},
+  number        = {2},
+  file          = {48-2-219.pdf}
+}
+
 @Article{vaisala02:prolongation,
   author =       {Olli Väisälä},
   title =        {Prolongation of Harmonies Related to the Harmonic Series in Early Post-Tonal Music},
@@ -4392,6 +4794,17 @@
   volume        = {5},
   number        = {2},
   file          = {843225.pdf}
+}
+
+@Article{         waters05:modes,
+  author        = {Keith Waters},
+  title         = {Modes, scales, functional harmony, and nonfunctional
+                  harmony in the compositions of herbie hancock},
+  journal       = {Computer Music Journal},
+  year          = {2005},
+  volume        = {49},
+  number        = {2},
+  file          = {49-2-333.pdf}
 }
 
 @Article{         webern79:anton,
